# azure-function-actix-web

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: build.yml
MyTimer/: function.json
infrastructure/: function.bicep  main.bicep
src/: main.rs
src/functions/: greet.rs  mod.rs  timer.rs
